--- a/styles.css
+++ b/styles.css
@@ -1,49 +1,61 @@
-/* Variables */
-:root {
-    --color-primary: #87582c;
-}
-
-/* General styles */
 html {
-    box-sizing: border-box;
     font-size: 62.5%;
+    box-sizing: border-box;
 }
 
 *, *::before, *::after {
     box-sizing: inherit;
 }
 
-/* Typography */
-h1, h2, h3 {
+body {
     margin: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.8rem;
 }
 
-/* Forms */
+/* Typography */
+
+.box {
+    background: #eee1d5;
+    padding: 0 20px 10px;
+    border-radius: 5px;
+    margin-bottom: 2rem;
+    box-shadow: 0 1px 3px rgb(0 0 0 / 0.2);
+}
+
+.box__heading {
+    color: #885a2d;
+    font-size: 2rem;
+    font-weight: 500;
+    margin: 0 0 3rem;
+    padding-top: 0.5rem;
+}
+
 .input-group {
     position: relative;
+    margin-bottom: 2rem;
 }
 
 .input-group--small {
-    width: 40%;
-}
-
-.label {
-    background: #ede1d5;
-    color: #9d7550;
-    font-size: 0.8rem;
-    left: 13px;
-    padding: 0 4px;
-    position: absolute;
-    top: -5px;
+    width: 50%;
 }
 
 .input {
-    background: #ede1d5;
+    border: 2px solid #885a2d;
+    background: rgba(0,0,0,0);
+    padding: 1rem;
+    text-indent: 20px;
     border-radius: 20px;
-    border: 1px solid var(--color-primary);
-    color: #5f6350;
-    font-size: 1rem;
-    outline: 0;
-    padding: 0.5rem 1.5rem;
     width: 100%;
+}
+
+.input-group__label {
+    position: absolute;
+    background: #eee1d5;
+    color: #885a2d;
+    font-size: 1.1rem;
+    top: -7px;
+    left: 25px;
 }
