--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-/* TODO:What a mess! Refactor this too */
+/* TODO:What a mess! I know I'll fix it later
+    and Refactor all these bad practice */
 html {
     font-size: 62.5%;
     box-sizing: border-box;
@@ -168,4 +169,9 @@ body {
 
 .order__total {
     grid-area: total;
+}
+
+.block {
+    max-width: 1140px;
+    margin: 0 auto;
 }
