--- a/faq-accordion-main/style.css
+++ b/faq-accordion-main/style.css
@@ -13,7 +13,9 @@ html {
     font-size: 62.5%;
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: inherit;
 }
 
@@ -33,6 +35,7 @@ body {
 
 img {
     width: 100%;
+    object-fit: cover;
 }
 
 /* Typography */
@@ -51,6 +54,7 @@ h2 {
     left: 0;
     right: 0;
     z-index: -1;
+    height: 28vh;
 }
 
 /* Card */
@@ -128,6 +132,10 @@ h2 {
 @media screen and (min-width: 768px) {
     h1 {
         font-size: 5rem;
+    }
+
+    .faq-bg {
+        height: 37vh;
     }
 
     .card {
