--- a/result-summary-component/style.css
+++ b/result-summary-component/style.css
@@ -1,9 +1,9 @@
 :root {
     /* Primary */
-    --color-light-red: hsla(0, 100%, 67%, 0.3);
-    --color-orangey-yellow: hsla(39, 100%, 56%);
-    --color-green-teal: hsla(166, 100%, 37%, 0.3);
-    --color-cobalt-blue: hsla(234, 85%, 45%, 0.3);
+    --color-light-red: hsla(0, 100%, 67%, 0.1);
+    --color-orangey-yellow: hsla(39, 100%, 56%, 0.1);
+    --color-green-teal: hsla(166, 100%, 37%, 0.1);
+    --color-cobalt-blue: hsla(234, 85%, 45%, 0.1);
 
     /* Gradients */
     --color-bg-light-slate-blue: rgb(120, 87, 255);
@@ -56,12 +56,13 @@ h3 {
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    background: rgb(102,16,181);
-    background: linear-gradient(180deg, rgb(92, 13, 165) 39%, rgba(36,33,202,0.4) 86%);
+    background: rgb(87,72,195);
+    background: linear-gradient(180deg, rgb(99, 39, 196) 19%, rgba(38, 35, 188, 0.1) 84%);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
 }
 
 .circle__result {
@@ -80,24 +81,29 @@ h3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1rem;
+    padding: 1rem;
+    margin-bottom: 1.5rem;
     border-radius: 10px;
 }
 
 .item--reaction {
     background-color: var(--color-light-red);
+    color: hsla(0, 100%, 67%, 1);
 }
 
 .item--memory {
     background-color: var(--color-orangey-yellow);
+    color: hsla(39, 100%, 56%, 1);
 }
 
 .item--verbal {
     background-color: var(--color-green-teal);
+    color: hsla(166, 100%, 37%, 1);
 }
 
 .item--visual {
     background-color: var(--color-cobalt-blue);
+    color: hsla(234, 85%, 45%, 1);
 }
 
 .item__name {
@@ -106,7 +112,8 @@ h3 {
 }
 
 .item__aspect {
-    margin-left: 1rem;
+    margin: 0 0 0 1rem;
+    font-size: 1.6rem;
 }
 
 .item__score {
@@ -120,21 +127,44 @@ h3 {
 /* Buttons */
 .btn {
     border: 0;
-    background: var(--color-dark-gray-blue);
+    background-color: transparent;
     padding: 1rem 2rem;
     width: 100%;
-    color: var(--color-pale-blue);
+    color: var(--color-dark-gray-blue);
+    border: 1px solid var(--color-dark-gray-blue);
     font-size: 1.8rem;
     cursor: pointer;
     border-radius: 30px;
+    position: relative;
+    /* overflow: hidden; */
+}
+
+.btn::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: var(--color-dark-gray-blue);
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%);
+    transition: transform .15s ease;
+}
+
+.btn::before:hover {
+    transform: translateX(0);
+}
+
+.btn:hover {
+    color: var(--color-White);
 }
 
 /* Cards */
 .card {
     color: #2e2e2e;
     background: var(--color-White);
-    border-radius: 20px;
     max-width: 370px;
+    padding-bottom: 2rem;
 }
 
 .card__header {
@@ -148,7 +178,7 @@ h3 {
 }
 
 .card__heading {
-    margin-bottom: 0;
+    margin: 3rem 0 0;
 }
 
 .card__desc {
@@ -168,6 +198,12 @@ h3 {
     display: grid;
 }
 
+/* Lists */
+.list {
+    list-style: none;
+    padding: 0;
+}
+
 @media screen and (min-width: 768px) {
     .grid--1x2 {
         grid-template-columns: 1fr 1fr;
@@ -175,6 +211,7 @@ h3 {
 
     .card {
         max-width: 600px;
+        border-radius: 20px;
     }
 
     .card__header {
