--- a/shopping/style.css
+++ b/shopping/style.css
@@ -99,6 +99,13 @@ body {
   transform: translateX(0);
 }
 
+.btn--delete {
+  border-radius: 30px;
+  padding: 0 0.4rem;
+  font-size: 1.5rem;
+}
+
+
 .shopping-list ul {
   list-style: none;
   margin: 0;
@@ -120,17 +127,7 @@ body {
 
 .shopping-item input[type="checkbox"]:checked + .itemName {
   opacity: 0.5;
+  text-decoration: line-through;
+  text-decoration-color: #2e2e2e;
+  text-decoration-thickness: 2px;
 }
-
-.shopping-item button {
-  padding: 0;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: transform 0.2s;
-}
-
-.shopping-item button:hover {
-  transform: scale(1.4);
-}
-
-
