Make the card responsive.

--- a/interactive-rating-component/components/cards.html
+++ b/interactive-rating-component/components/cards.html
@@ -36,3 +36,15 @@
   </ul>
   <button class="btn">Submit</button>
 </div>
+
+<div class="card card--thanks">
+  <img src="images/illustration-thank-you.svg" alt="" />
+  <span class="badge">
+    <p class="badge__text">You selected x out of 5</p>
+  </span>
+  <h1 class="card__heading">Thank you!</h1>
+  <p class="card__desc">
+    We appreciate you taking the time to give a rating. if you ever need more
+    support, don't hesitate to get in touch!
+  </p>
+</div>
