--- a/state-perview-card/style.css
+++ b/state-perview-card/style.css
@@ -21,13 +21,70 @@ body {
     font-size: 1.5rem;
     font-family: 'Lexend Deca', Arial, Helvetica, sans-serif;
     background-color: var(--color-very-dark-blue);
+    color: white;
 }
 
 h1 {
-    font-size: 5rem;
+    font-size: 3.5rem;
+}
+
+h2 {
+    font-size: 3rem;
 }
 
 img {
     width: 100%;
 }
 
+/* Cards */
+.card {
+    background-color: var(--color-dark-desaturated-blue);
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.card__header {
+    position: relative;
+}
+
+.card__header::after {
+    content: '';
+    background-color: var(--color-soft-violet);
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+}
+
+.card__content {
+    text-align: center;
+    padding: 2rem;
+}
+
+.card__colored {
+    color: var(--color-soft-violet);
+}
+
+.card__desc {
+    line-height: 1.5;
+    color: var(--color-slightly-transparent-white);
+    margin: 0 0 6rem;
+}
+
+.card__item {
+    margin: 4rem 0 1rem;
+}
+
+.card__item  h2 {
+    font-weight: 400;
+}
+
+.card__item  p {
+    margin: 0;
+    color: var(--color-slightly-transparent-white);
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
