--- a/state-perview-card/style.css
+++ b/state-perview-card/style.css
@@ -22,6 +22,7 @@ body {
     font-family: 'Lexend Deca', Arial, Helvetica, sans-serif;
     background-color: var(--color-very-dark-blue);
     color: white;
+    padding: 1rem;
 }
 
 h1 {
@@ -34,6 +35,8 @@ h2 {
 
 img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* Cards */
@@ -87,4 +90,26 @@ img {
     color: var(--color-slightly-transparent-white);
     text-transform: uppercase;
     letter-spacing: 2px;
+}
+
+@media screen and (min-width: 768px) {
+    .grid--1x2 {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .card {
+        max-width: 1140px;
+        max-height: 500px;
+        margin: 0 auto;
+    }
+
+    .card__content {
+        text-align: left;
+        padding: 5rem;
+    }
+
+    .card__header {
+        order: 2;
+    }
 }
